# vsp-rust

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  testc
.devops/: git_commit_all.sh  git_push_all.sh  git_recreate_branch.sh
conf/: log4rs.yaml
release/lib/: libvsp.d  libvsp.rlib
src/: ctx.rs  lib.rs
src/cli/: cmd.rs  error.rs  init.rs  mod.rs  option.rs  opts.rs
src/compile/: ast.rs  buffer.rs  compile.rs  error.rs  lexer.rs  mod.rs  parser.rs  refcount.rs  statement.rs  token.rs  tokenizer.rs
src/compile/ast/: mod.rs  ns.rs  stmt.rs
src/compile/optim/: mod.rs
src/fs/: buffer.rs  file.rs  mod.rs  source.rs  stream.rs
src/fstd/: mod.rs  pos.rs
src/oop/: primitive.rs
src/std/: chars.rs  gen.rs  mod.rs  substring.rs
src/sys/: native.rs  sys.rs
src/vm/: constant.rs  frame.rs  mod.rs  process.rs  static_table.rs  vm.rs
vsp/: test.vsp
vsp/std/iter/: Iterator.vsp
vsp/std/lang/: Error.vsp
