[package]
name = "vsp"
version = "0.0.1"
authors = ["Leryn"]
edition = "2018"
description = "A toy language compiler"
repository = "https://github.com/leryn1122/vsp"
readme = "README.md"
keywords = ["compiler"]
license = "MIT"

#[lib]
#name = "vspc"
#crate-type = ["cdylib"]

[dependencies]
hashbrown = "0.12"
regex = "1.5"
strum = "0.24"
strum_macros = "0.24"
substring = "1.4"
#url = "2.2.2"
