[package]
name = "vsp"
version = "0.0.1"
authors = ["Leryn"]
edition = "2018"
description = "A toy language compiler"
repository = "https://github.com/leryn1122/vsp"
readme = "README.md"
keywords = ["compiler"]
license = "MIT"

#[lib]
#name = "vspc"
#crate-type = ["dylib"]

[profile.release]
lto=true
opt-level='z'

[dependencies]
hashbrown = "^0.12.0"
lazy_static = "^1.4.0"
log = "^0.4.16"
regex = "^1.5.5"
strum = "^0.24.0"
strum_macros = "^0.24.0"
stderrlog = "^0.5.1"
env_logger = "^0.9.0"
#substring = "^1.4.5"
#url = "2.2.2"
zip = { version = "^0.6.2", feature = "bzip2" }
