[package]
name = "vsp"
version = "0.0.1"
authors = ["Leryn"]
edition = "2018"
description = "A toy language compiler"
repository = "https://github.com/leryn1122/vsp"
readme = "README.md"
keywords = ["compiler"]
license = "MIT"

[[bin]]
name = "vspc"

[[bin]]
name = "vspr"

[[bin]]
name = "vsprepl"

[[bin]]
name = "vsps"

[[bin]]
name = "vspstk"

[[bin]]
name = "vspx"

[lib]
name = "vsp"
crate-type = ["rlib", "dylib"]

[profile.release]
codegen-units = 1
opt-level = "z"

[dependencies]
env_logger = "^0.9.0"
hashbrown = "^0.12.0"
lazy_static = "^1.4.0"
libc = "^0.2.124"
log = "^0.4.16"
regex = "^1.5.5"
smallvec = { version = "^1.8.0", default-features = false }
#stderrlog = "^0.5.1"
#substring = "^1.4.5"
zip = { version = "^0.6.2", feature = "bzip2" }
